using code analyze suggestions